Replace BitmapLevel2.finalize() with Cleaner for off-heap release
Object.finalize() is deprecated since Java 9, runs on a single FinalizerThread, and requires two GC cycles before reclamation — under load the queue lags arbitrarily, and on a quiet JVM the FinalizerThread may never schedule. StorageEntity already explicitly avoids this pattern; BitmapLevel2 was the holdout.

Replace finalize() with java.lang.ref.Cleaner registration. The cleanup state-holder is a static nested class so it does not capture `this` (otherwise the wrapper would never become unreachable and the Cleaner would never fire). Its address field is mutable so the cleaner tracks the level2Address through compress/decompress reassignments and through the binary-handler deserialization path.

A new package-private setLevel2Address(long) writes both the field and the cleanup state. All three reassignment sites route through it: ensureCompressed, ensureDecompressed, and BinaryHandlerBitmapLevel2 .updateState — the last is non-obvious: the handler creates the wrapper with address 0 and publishes the real address later via updateState, so without the setter every deserialised-then-discarded BitmapLevel2 would leak its region.

Tests in BitmapLevel2CleanerTest cover (a) the cleaner releases on GC for freshly constructed instances and (b) the deserialization-path setter propagates and the cleaner releases the post-setter address.